# rkg-utils

./: .gitignore  Cargo.toml  LICENSE-MIT  NOTICE  README.md
src/: byte_handler.rs  crc.rs  lib.rs  main.rs  shroomstrat.rs  tests.rs
src/ctgp_footer/: category.rs  ctgp_version.rs  exact_finish_time.rs  mod.rs
src/ctgp_metadata/: category.rs  ctgp_version.rs  exact_finish_time.rs  mod.rs
src/footer/: mod.rs
src/footer/ctgp_footer/: category.rs  ctgp_version.rs  exact_finish_time.rs  exact_in_game_time.rs  (+2 more)
src/header/: combo.rs  controller.rs  date.rs  finish_time.rs  ghost_type.rs  in_game_time.rs  mii.rs  mod.rs  slot_id.rs  transmission_mod.rs
src/input_data/: compression_method.rs  controller_input.rs  direction_input.rs  dpad_button.rs  dpad_input.rs  drift_flag.rs  face_button.rs  face_input.rs  input.rs  mod.rs  stick_input.rs  trick_input.rs
src/sp_footer/: mod.rs  sp_version.rs
test_ghosts/: 01m01s2054072 John 6 29.rkg  01m44s4420944 chϊcκεη.rkg  01m54s9878581 chϊcκεη.rkg  02m20s0069256 Rc9 Scion.rkg  02m42s5850962 Daelyn_resave.rkg  2m04s292_☆ROK☆Ken.rkg  JC_LC_Compressed_Copy.rkg  JC_LC_Compressed_Copy_Broken.rkg  JC_LC_Compressed_Resave.rkg  JC_LC_Copy.rkg  JC_transformed_ghost.rkg  LC_JC_1m03s904.rkg  ghost2_comp_00.rkg  ghost2_comp_08.rkg  ghost2_comp_08_resave.rkg  illegal_brake_input.rkg  illegal_drift_input.rkg  ken 2 04 292 input data.rkg  ken mii and other data.rkg  mc_glitch_sp_resave.rkg  mc_no_glitch_sp.rkg  pause_during_countdown.rkg  pause_during_countdown_uncompressed.rkg  poland.rkg  rMC3_no name_1m19s817.rkg  vanilla8laps.rkg
(+90 files in other folders)
