[package]
name = "rkg-utils"
license = "MIT"
version = "0.1.0"
edition = "2024"
authors = ["Skylar Childers", "Leila Massanova"]
description = "A crate allowing the parsing and modification of Mario Kart Wii ghost files."
exclude = ["test_ghosts/", "tests.rs"]

[dependencies]
chrono = "0.4.42"
sha1 = "0.10.6"
thiserror = "2.0.17"
