[package]
name = "rkg-utils"
license = "GPL-3.0-or-later"
version = "0.2.0"
edition = "2024"
authors = ["Skylar Childers", "Leila Massanova <leilamassanova@gmail.com>"]
description = "A crate allowing the parsing and modification of Mario Kart Wii ghost files."
exclude = ["test_ghosts/", "tests.rs"]
repository = "https://github.com/skylarc2006/rkg-utils"

[dependencies]
chrono = "0.4.42"
sha1 = "0.10.6"
thiserror = "2.0.17"
